# taskly

./: LICENSE.md  README.md  pyproject.toml
src/taskly/: main.py
tests/: test_taskly.py
