[project]
name = "taskly"
version = "0.1.0"
description = "A clean todo-list CLI built with Typer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
taskly = "taskly.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskly"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
